--- a/tralixer/asserts/css/main.css
+++ b/tralixer/asserts/css/main.css
@@ -3,3 +3,15 @@ Project :tralixer
 Date :11/18/2022
 Time :9:13 PM
 */
+
+#canvas1{
+    border: 5px solid black;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    background:brown;
+    max-height: 100%;
+    max-width: 100%;
+
+}
