--- a/tralixer/asserts/css/main.css
+++ b/tralixer/asserts/css/main.css
@@ -4,6 +4,10 @@ Date :11/18/2022
 Time :9:13 PM
 */
 
+*{
+    box-sizing: border-box;
+}
+
 #canvas1{
     border: 5px solid black;
     position: absolute;
