--- a/tralixer/asserts/css/main.css
+++ b/tralixer/asserts/css/main.css
@@ -14,7 +14,7 @@ Time :9:13 PM
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    background:brown;
+    background: #2e7fa2;
     max-height: 100%;
     max-width: 100%;
 
