--- a/tralixer/asserts/css/main.css
+++ b/tralixer/asserts/css/main.css
@@ -9,7 +9,7 @@ Time :9:13 PM
 }
 
 #canvas1{
-    border: 5px solid black;
+    /*border: 5px solid black;*/
     position: absolute;
     top: 50%;
     left: 50%;
